fix: FilterBar z-index  added to be visible over dashboard.

--- a/src/components/Clients/FilterBar/FilterBar.css
+++ b/src/components/Clients/FilterBar/FilterBar.css
@@ -3,6 +3,8 @@
     min-width: 100%;
     height: 50px;
     background: #f9f6f6;
+    position: relative;
+    z-index: 2;
 }
 
 .menu {
